k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forensics-ingress
  namespace: digital-forensics
spec:
  ingressClassName: nginx
  rules:
    - host: forensics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forensics-service
                port:
                  number: 80
